# prune-container-repo

./: Makefile  README.md  prune-container-repo  pyproject.toml  setup.cfg
repoprune/: repoprune.py
